# linguist-python

./: .appveyor.yml  .coveragerc  .gitattributes  .gitignore  .mypy.ini  .travis.yml  MANIFEST.in  PyLinguist.py  README.md  ghLinguist.py  pylinguist.py  setup.cfg
.github/workflows/: ci.yml
archive/: .appveyor.yml
ghlinguist/: __init__.py
pylinguist/: __init__.py
src/ghlinguist/: __init__.py  __main__.py
src/ghlinguist/tests/: test_mod.py
tests/: test_mod.py
