[metadata]
name = ghlinguist
version = 1.0.0
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
description = simple command-line parser of GitHub Linguist Ruby program.
url = https://github.com/scivision/linguist-python
keywords =
  github
  programming
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Framework :: Pytest
  Intended Audience :: Developers
  Intended Audience :: Information Technology
  Operating System :: OS Independent
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Topic :: Software Development :: Libraries :: Ruby Modules
  Topic :: Text Processing :: Filters
  Topic :: Utilities
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
setup_requires =
  setuptools >= 38.6
  pip >= 10
packages = find:
zip_safe: safe
scripts =
  ghLinguist.py
install_requires =

[options.extras_require]
tests =
  pytest
cov =
  pytest-cov
  coveralls
  flake8
  mypy

[options.entry_points]
console_scripts =
  ghlinguist = ghLinguist:main