[metadata]
name = ghlinguist
version = 1.0.1
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
description = simple command-line parser of GitHub Linguist Ruby program.
url = https://github.com/scivision/linguist-python
keywords =
  github
  programming
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Developers
  Intended Audience :: Information Technology
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Topic :: Software Development :: Libraries :: Ruby Modules
  Topic :: Text Processing :: Filters
  Topic :: Utilities
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.7
packages = find:
package_dir=
  =src

[options.packages.find]
where=src

[options.extras_require]
tests =
  pytest
lint =
  flake8
  flake8-bugbear
  flake8-builtins
  flake8-blind-except
  mypy
